initial vector advection stuff. Still have a lot to do here. The gui stuff is missing. Need to handle switching between vis options. Also need to handle swapping textures on the vviz node. . .

--- a/VE_Xplorer/VE_Xplorer.vcproj
+++ b/VE_Xplorer/VE_Xplorer.vcproj
@@ -1466,6 +1466,9 @@
 						RelativePath=".\cfdUpdateTextureCallback.cpp">
 					</File>
 					<File
+						RelativePath=".\cfdVectorVolumeVisHandler.cxx">
+					</File>
+					<File
 						RelativePath=".\cfdVolumeVisNodeHandler.cxx">
 					</File>
 				</Filter>
@@ -1501,6 +1504,9 @@
 					</File>
 					<File
 						RelativePath=".\cfdUpdateTextureCallback.h">
+					</File>
+					<File
+						RelativePath=".\cfdVectorVolumeVisHandler.h">
 					</File>
 					<File
 						RelativePath=".\cfdVolumeVisNodeHandler.h">
