this includes updates for some intial text output to tell the user that the app is stil creating actors. fixes also to get the osg code working on unix platforms and corrected some coord issues

--- a/VE_Xplorer/Makefile
+++ b/VE_Xplorer/Makefile
@@ -161,6 +161,7 @@ SRCS=\
    cfdQuatCam.cxx \
    cfdReadParam.cxx \
    cfdScalarBarActor.cxx \
+   cfdScalarVolumeVisHandler.cxx \
    cfdSceneNode.cxx \
    cfdSequence.cxx \
    cfdSound.cxx \
@@ -184,6 +185,7 @@ SRCS=\
    cfdVjObsWrapper.cxx \
    cfdVolumeSliceSwitchCallback.cpp \
    cfdVolumeVisualization.cpp \
+   cfdVolumeVisNodeHandler.cxx \
    cfdVEXplorer.cxx \
    cfdWriteTraverser.cxx \
    fileIO.cxx \
