--- a/VE_Xplorer/VE_Xplorer.vcproj
+++ b/VE_Xplorer/VE_Xplorer.vcproj
@@ -799,9 +799,6 @@
 				RelativePath=".\cfdVjObsWrapper.cxx">
 			</File>
 			<File
-				RelativePath=".\cfdVolumeSliceSwitchCallback.cpp">
-			</File>
-			<File
 				RelativePath=".\cfdVolumeVisualization.cpp">
 			</File>
 			<File
@@ -1295,9 +1292,6 @@
 				RelativePath=".\cfdVjObsWrapper.h">
 			</File>
 			<File
-				RelativePath=".\cfdVolumeSliceSwitchCallback.h">
-			</File>
-			<File
 				RelativePath=".\cfdVolumeVisualization.h">
 			</File>
 			<File
@@ -1415,6 +1409,9 @@
 						RelativePath=".\cfd3DTextureCullCallback.cxx">
 					</File>
 					<File
+						RelativePath=".\cfdCopyTextureCallback.cxx">
+					</File>
+					<File
 						RelativePath=".\cfdCopyTo3DTextureStage.cxx">
 					</File>
 					<File
@@ -1453,6 +1450,9 @@
 					Filter="">
 					<File
 						RelativePath=".\cfd3DTextureCullCallback.h">
+					</File>
+					<File
+						RelativePath=".\cfdCopyTextureCallback.h">
 					</File>
 					<File
 						RelativePath=".\cfdCopyTo3DTextureStage.h">
