added texture makefile ref

--- a/VE_Xplorer/Makefile
+++ b/VE_Xplorer/Makefile
@@ -176,6 +176,7 @@ SRCS=\
    cfdTextOutput.cxx \
    cfdTextureBasedModel.cxx \
    cfdTextureBasedVizHandler.cxx \
+   cfdTextureMatrixCallback.cxx \
    cfdTextureManager.cxx \
    cfdThread.cxx \
    cfdUpdateTextureCallback.cpp \
