--- a/VE_Conductor/Framework/WinClient.vcproj
+++ b/VE_Conductor/Framework/WinClient.vcproj
@@ -106,7 +106,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="aced.lib TAOd.lib TAO_CosNamingd.lib TAO_PortableServerd.lib TAO_BiDirGIOPd.lib odbc32.lib odbccp32.lib comctl32.lib rpcrt4.lib wsock32.lib wxmsw24d.lib xerces-c_2D.lib"
-				OutputFile=".\WinClient.exe"
+				OutputFile="$(VE_SUITE_HOME)\bin\win32\WinClientd.exe"
 				LinkIncremental="1"
 				SuppressStartupBanner="TRUE"
 				AdditionalLibraryDirectories="&quot;$(TAO_ROOT)\tao&quot;;&quot;$(TAO_ROOT)\orbsvcs\orbsvcs&quot;;&quot;$(TAO_ROOT)\tao\BiDir_GIOP&quot;;&quot;$(TAO_ROOT)\tao\PortableServer&quot;;&quot;$(WX_HOME)\lib&quot;;&quot;$(ACE_ROOT)\bin&quot;;&quot;$(ACE_ROOT)\ace&quot;;&quot;$(XERCESCROOT)\Build\Win32\VC7\Debug&quot;"
@@ -212,6 +212,9 @@
 						BasicRuntimeChecks="3"
 						BrowseInformation="1"/>
 				</FileConfiguration>
+			</File>
+			<File
+				RelativePath=".\Geometry.cpp">
 			</File>
 			<File
 				RelativePath="GlobalParamDialog.cpp">
@@ -605,6 +608,9 @@
 				RelativePath="Frame.h">
 			</File>
 			<File
+				RelativePath=".\Geometry.h">
+			</File>
+			<File
 				RelativePath="GlobalParamDialog.h">
 			</File>
 			<File
@@ -615,6 +621,9 @@
 			</File>
 			<File
 				RelativePath=".\paraThread.h">
+			</File>
+			<File
+				RelativePath=".\Plugin_base.h">
 			</File>
 			<File
 				RelativePath="PluginLoader.h">
