class to read vtk files in new xml format

--- a/VE_Xplorer/VE_Xplorer.vcproj
+++ b/VE_Xplorer/VE_Xplorer.vcproj
@@ -802,6 +802,9 @@
 				RelativePath=".\cfdVolumeVisualization.cpp">
 			</File>
 			<File
+				RelativePath=".\cfdVTKFileHandler.cxx">
+			</File>
+			<File
 				RelativePath=".\cfdWriteTraverser.cxx">
 			</File>
 			<File
@@ -1293,6 +1296,9 @@
 			</File>
 			<File
 				RelativePath=".\cfdVolumeVisualization.h">
+			</File>
+			<File
+				RelativePath=".\cfdVTKFileHandler.h">
 			</File>
 			<File
 				RelativePath=".\cfdWriteTraverser.h">
