initial class for xml vtk file reader

--- a/VE_Xplorer/Makefile
+++ b/VE_Xplorer/Makefile
@@ -180,6 +180,7 @@ SRCS=\
    cfdTextureManager.cxx \
    cfdThread.cxx \
    cfdUpdateTextureCallback.cpp \
+   cfdVTKFileHandler.cxx \
    cfdVectorBase.cxx \
    cfdVector.cxx \
    cfdVectors.cxx \
