making changes to go along w/ the DCS changes. Need to figure out how to make the initial dataset active for textures. Currently you have to change datasets before the vis will update.Also have some texture advection code udpates.

--- a/VE_Xplorer/Makefile
+++ b/VE_Xplorer/Makefile
@@ -169,13 +169,14 @@ SRCS=\
    cfdSteadyStateVizHandler.cxx \
    cfdStreamers.cxx \
    cfdSwitch.cxx \
+   cfdPBufferQuad.cxx \
    cfdPfSceneManagement.cxx \
    cfdPolyData.cxx \
    cfdTeacher.cxx \
    cfdTempAnimation.cxx \
    cfdTextOutput.cxx \
-   cfdTextureBasedModel.cxx \
    cfdTextureBasedVizHandler.cxx \
+   cfdTextureDataSet.cxx \
    cfdTextureMatrixCallback.cxx \
    cfdTextureManager.cxx \
    cfdThread.cxx \
