--- a/VE_Xplorer/VE_Xplorer.vcproj
+++ b/VE_Xplorer/VE_Xplorer.vcproj
@@ -416,7 +416,7 @@
 				Name="VCCLCompilerTool"
 				AdditionalOptions="/Zm800"
 				Optimization="0"
-				AdditionalIncludeDirectories="&quot;$(OSGHOME)\include&quot;;./;../;&quot;$(VTK_HOME)\include\vtk&quot;;&quot;$(VJ_DEPS_DIR)\include&quot;;&quot;$(VJ_BASE_DIR)\include&quot;;&quot;$(NSPR_ROOT)\include&quot;;&quot;$(OMNI_HOME)\include&quot;;&quot;$(VE_SUITE_HOME)\VE_SceneGraph&quot;;&quot;$(WX_HOME)\include&quot;;&quot;$(WX_HOME)\lib\mswd&quot;;&quot;$(CONDUCTOR_BASE_DIR)\impl&quot;;&quot;$(VE_SUITE_HOME)\VESOpen\skel&quot;"
+				AdditionalIncludeDirectories="&quot;$(OSGHOME)\include&quot;;./;../;&quot;$(VTK_HOME)\include\vtk&quot;;&quot;$(VJ_DEPS_DIR)\include&quot;;&quot;$(VJ_BASE_DIR)\include&quot;;&quot;$(NSPR_ROOT)\include&quot;;&quot;$(OMNI_HOME)\include&quot;;&quot;$(VE_SUITE_HOME)\VE_SceneGraph&quot;;&quot;$(VE_SUITE_HOME)\VE-VolumeVis&quot;;&quot;$(WX_HOME)\include&quot;;&quot;$(WX_HOME)\lib\mswd&quot;;&quot;$(CONDUCTOR_BASE_DIR)\impl&quot;;&quot;$(VE_SUITE_HOME)\VESOpen\skel&quot;"
 				PreprocessorDefinitions="_DEBUG;_OSG;VTK44;TABLET;WIN32;_CONSOLE;__WIN32__;__x86__;__NT__;__OSVERSION__=4;_WIN32"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
@@ -484,7 +484,7 @@
 				Name="VCCLCompilerTool"
 				AdditionalOptions="/Zm800"
 				Optimization="0"
-				AdditionalIncludeDirectories="&quot;$(OSGHOME)\include&quot;;./;../;&quot;$(VTK_HOME)\include\vtk&quot;;&quot;$(VJ_DEPS_DIR)\include&quot;;&quot;$(VJ_BASE_DIR)\include&quot;;&quot;$(NSPR_ROOT)\include&quot;;&quot;$(OMNI_HOME)\include&quot;;&quot;$(CONDUCTOR_BASE_DIR)\impl&quot;;&quot;$(VE_SUITE_HOME)\VE_SceneGraph&quot;;&quot;$(WX_HOME)\include&quot;;&quot;$(WX_HOME)\lib\mswd&quot;;&quot;$(CG_INC_PATH)&quot;;&quot;$(OSGHOME)\..\osgNV\include&quot;;&quot;$(IDL_HOME)\skel&quot;"
+				AdditionalIncludeDirectories="&quot;$(OSGHOME)\include&quot;;./;../;&quot;$(VTK_HOME)\include\vtk&quot;;&quot;$(VJ_DEPS_DIR)\include&quot;;&quot;$(VJ_BASE_DIR)\include&quot;;&quot;$(NSPR_ROOT)\include&quot;;&quot;$(OMNI_HOME)\include&quot;;&quot;$(CONDUCTOR_BASE_DIR)\impl&quot;;&quot;$(VE_SUITE_HOME)\VE_SceneGraph&quot;;&quot;$(VE_SUITE_HOME)\VE-VolumeVis&quot;;&quot;$(WX_HOME)\include&quot;;&quot;$(WX_HOME)\lib\mswd&quot;;&quot;$(CG_INC_PATH)&quot;;&quot;$(OSGHOME)\..\osgNV\include&quot;;&quot;$(IDL_HOME)\skel&quot;"
 				PreprocessorDefinitions="_DEBUG;_OSG;VTK44;TABLET;WIN32;_CONSOLE;__WIN32__;__x86__;__NT__;__OSVERSION__=4;_WIN32;CFD_USE_SHADERS"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
@@ -798,9 +798,6 @@
 			</File>
 			<File
 				RelativePath=".\cfdVjObsWrapper.cxx">
-			</File>
-			<File
-				RelativePath=".\cfdVolumeVisualization.cpp">
 			</File>
 			<File
 				RelativePath=".\cfdVTKFileHandler.cxx">
@@ -1296,9 +1293,6 @@
 				RelativePath=".\cfdVjObsWrapper.h">
 			</File>
 			<File
-				RelativePath=".\cfdVolumeVisualization.h">
-			</File>
-			<File
 				RelativePath=".\cfdVTKFileHandler.h">
 			</File>
 			<File
@@ -1350,159 +1344,202 @@
 			Filter="ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe">
 		</Filter>
 		<Filter
-			Name="Texture Classes"
+			Name="Volume Vis Classes"
 			Filter="">
 			<Filter
-				Name="Shader Helper Classes"
+				Name="Core Classes"
 				Filter="">
 				<Filter
 					Name="src"
 					Filter="">
 					<File
-						RelativePath=".\cfdAdvectionSubGraph.cxx">
+						RelativePath="..\VE-VolumeVis\cfdTextureBasedVizHandler.cxx">
 					</File>
 					<File
-						RelativePath=".\cfdOSGAdvectionShaderManager.cxx">
+						RelativePath="..\VE-VolumeVis\cfdTextureDataSet.cxx">
 					</File>
 					<File
-						RelativePath=".\cfdOSGScalarShaderManager.cxx">
+						RelativePath="..\VE-VolumeVis\cfdTextureManager.cxx">
 					</File>
 					<File
-						RelativePath=".\cfdOSGShaderManager.cxx">
+						RelativePath="..\VE-VolumeVis\cfdTextureMatrixCallback.cxx">
 					</File>
 					<File
-						RelativePath=".\cfdOSGTransferShaderManager.cxx">
-					</File>
-					<File
-						RelativePath=".\cfdPBufferManager.cxx">
-					</File>
-					<File
-						RelativePath=".\cfdPBufferQuad.cxx">
-					</File>
-					<File
-						RelativePath=".\cfdTextureMatrixCallback.cxx">
+						RelativePath="..\VE-VolumeVis\cfdVolumeVisualization.cxx">
 					</File>
 				</Filter>
 				<Filter
 					Name="headers"
 					Filter="">
 					<File
-						RelativePath=".\cfdAdvectionSubGraph.h">
+						RelativePath="..\VE-VolumeVis\cfdTextureBasedVizHandler.h">
 					</File>
 					<File
-						RelativePath=".\cfdAdvectPropertyCallback.h">
+						RelativePath="..\VE-VolumeVis\cfdTextureDataSet.h">
 					</File>
 					<File
-						RelativePath=".\cfdOSGAdvectionShaderManager.h">
+						RelativePath="..\VE-VolumeVis\cfdTextureManager.h">
 					</File>
 					<File
-						RelativePath=".\cfdOSGScalarShaderManager.h">
+						RelativePath="..\VE-VolumeVis\cfdTextureMatrixCallback.h">
 					</File>
 					<File
-						RelativePath=".\cfdOSGShaderManager.h">
-					</File>
-					<File
-						RelativePath=".\cfdOSGTransferShaderManager.h">
-					</File>
-					<File
-						RelativePath=".\cfdPBufferManager.h">
-					</File>
-					<File
-						RelativePath=".\cfdPBufferQuad.h">
-					</File>
-					<File
-						RelativePath=".\cfdTextureMatrixCallback.h">
+						RelativePath="..\VE-VolumeVis\cfdVolumeVisualization.h">
 					</File>
 				</Filter>
 			</Filter>
 			<Filter
-				Name="Texture Helper Clasess"
+				Name="Shader Extensions"
 				Filter="">
 				<Filter
-					Name="src"
+					Name="Shader Managers"
 					Filter="">
-					<File
-						RelativePath=".\cfd3DTextureCullCallback.cxx">
-					</File>
-					<File
-						RelativePath=".\cfdCopyTo3DTextureStage.cxx">
-					</File>
-					<File
-						RelativePath=".\cfdOSGPingPongTexture3d.cxx">
-					</File>
-					<File
-						RelativePath=".\cfdScalarVolumeVisHandler.cxx">
-					</File>
-					<File
-						RelativePath=".\cfdTextureBasedVizHandler.cxx">
-					</File>
-					<File
-						RelativePath=".\cfdTextureDataSet.cxx">
-					</File>
-					<File
-						RelativePath=".\cfdTextureManager.cxx">
-					</File>
-					<File
-						RelativePath=".\cfdUpdateableOSGNoiseTexture3d.cxx">
-					</File>
-					<File
-						RelativePath=".\cfdUpdateableOSGTexture1d.cxx">
-					</File>
-					<File
-						RelativePath=".\cfdUpdateParameterCallback.cpp">
-					</File>
-					<File
-						RelativePath=".\cfdUpdateTextureCallback.cpp">
-					</File>
-					<File
-						RelativePath=".\cfdVectorVolumeVisHandler.cxx">
-					</File>
-					<File
-						RelativePath=".\cfdVolumeVisNodeHandler.cxx">
-					</File>
+					<Filter
+						Name="src"
+						Filter="">
+						<File
+							RelativePath="..\VE-VolumeVis\cfdOSGAdvectionShaderManager.cxx">
+						</File>
+						<File
+							RelativePath="..\VE-VolumeVis\cfdOSGGammaShaderManager.cxx">
+						</File>
+						<File
+							RelativePath="..\VE-VolumeVis\cfdOSGScalarShaderManager.cxx">
+						</File>
+						<File
+							RelativePath="..\VE-VolumeVis\cfdOSGShaderManager.cxx">
+						</File>
+						<File
+							RelativePath="..\VE-VolumeVis\cfdOSGTransferShaderManager.cxx">
+						</File>
+					</Filter>
+					<Filter
+						Name="headers"
+						Filter="">
+						<File
+							RelativePath="..\VE-VolumeVis\cfdOSGAdvectionShaderManager.h">
+						</File>
+						<File
+							RelativePath="..\VE-VolumeVis\cfdOSGGammaShaderManager.h">
+						</File>
+						<File
+							RelativePath="..\VE-VolumeVis\cfdOSGScalarShaderManager.h">
+						</File>
+						<File
+							RelativePath="..\VE-VolumeVis\cfdOSGShaderManager.h">
+						</File>
+						<File
+							RelativePath="..\VE-VolumeVis\cfdOSGTransferShaderManager.h">
+						</File>
+					</Filter>
 				</Filter>
 				<Filter
-					Name="headers"
+					Name="VolumeVis Handlers"
 					Filter="">
-					<File
-						RelativePath=".\cfd3DTextureCullCallback.h">
-					</File>
-					<File
-						RelativePath=".\cfdCopyTo3DTextureStage.h">
-					</File>
-					<File
-						RelativePath=".\cfdOSGPingPongTexture3d.h">
-					</File>
-					<File
-						RelativePath=".\cfdScalarVolumeVisHandler.h">
-					</File>
-					<File
-						RelativePath=".\cfdTextureBasedVizHandler.h">
-					</File>
-					<File
-						RelativePath=".\cfdTextureDataSet.h">
-					</File>
-					<File
-						RelativePath=".\cfdTextureManager.h">
-					</File>
-					<File
-						RelativePath=".\cfdUpdateableOSGNoiseTexture3d.h">
-					</File>
-					<File
-						RelativePath=".\cfdUpdateableOSGTexture1d.h">
-					</File>
-					<File
-						RelativePath=".\cfdUpdateParameterCallback.h">
-					</File>
-					<File
-						RelativePath=".\cfdUpdateTextureCallback.h">
-					</File>
-					<File
-						RelativePath=".\cfdVectorVolumeVisHandler.h">
-					</File>
-					<File
-						RelativePath=".\cfdVolumeVisNodeHandler.h">
-					</File>
+					<Filter
+						Name="src"
+						Filter="">
+						<File
+							RelativePath="..\VE-VolumeVis\cfdScalarVolumeVisHandler.cxx">
+						</File>
+						<File
+							RelativePath="..\VE-VolumeVis\cfdVectorVolumeVisHandler.cxx">
+						</File>
+						<File
+							RelativePath="..\VE-VolumeVis\cfdVolumeVisNodeHandler.cxx">
+						</File>
+					</Filter>
+					<Filter
+						Name="headers"
+						Filter="">
+						<File
+							RelativePath="..\VE-VolumeVis\cfdScalarVolumeVisHandler.h">
+						</File>
+						<File
+							RelativePath="..\VE-VolumeVis\cfdVectorVolumeVisHandler.h">
+						</File>
+						<File
+							RelativePath="..\VE-VolumeVis\cfdVolumeVisNodeHandler.h">
+						</File>
+					</Filter>
+				</Filter>
+				<Filter
+					Name="Texture Advection Classes"
+					Filter="">
+					<Filter
+						Name="src"
+						Filter="">
+						<File
+							RelativePath="..\VE-VolumeVis\cfd3DTextureCullCallback.cxx">
+						</File>
+						<File
+							RelativePath="..\VE-VolumeVis\cfdAdvectionSubGraph.cxx">
+						</File>
+						<File
+							RelativePath="..\VE-VolumeVis\cfdAdvectPropertyCallback.cxx">
+						</File>
+						<File
+							RelativePath="..\VE-VolumeVis\cfdCopyTo3DTextureStage.cxx">
+						</File>
+						<File
+							RelativePath="..\VE-VolumeVis\cfdOSGPingPongTexture3d.cxx">
+						</File>
+						<File
+							RelativePath="..\VE-VolumeVis\cfdPBufferManager.cxx">
+						</File>
+						<File
+							RelativePath="..\VE-VolumeVis\cfdPBufferQuad.cxx">
+						</File>
+						<File
+							RelativePath="..\VE-VolumeVis\cfdUpdateableOSGNoiseTexture3d.cxx">
+						</File>
+						<File
+							RelativePath="..\VE-VolumeVis\cfdUpdateableOSGTexture1d.cxx">
+						</File>
+						<File
+							RelativePath="..\VE-VolumeVis\cfdUpdateParameterCallback.cxx">
+						</File>
+						<File
+							RelativePath="..\VE-VolumeVis\cfdUpdateTextureCallback.cxx">
+						</File>
+					</Filter>
+					<Filter
+						Name="headers"
+						Filter="">
+						<File
+							RelativePath="..\VE-VolumeVis\cfd3DTextureCullCallback.h">
+						</File>
+						<File
+							RelativePath="..\VE-VolumeVis\cfdAdvectionSubGraph.h">
+						</File>
+						<File
+							RelativePath="..\VE-VolumeVis\cfdAdvectPropertyCallback.h">
+						</File>
+						<File
+							RelativePath="..\VE-VolumeVis\cfdCopyTo3DTextureStage.h">
+						</File>
+						<File
+							RelativePath="..\VE-VolumeVis\cfdOSGPingPongTexture3d.h">
+						</File>
+						<File
+							RelativePath="..\VE-VolumeVis\cfdPBufferManager.h">
+						</File>
+						<File
+							RelativePath="..\VE-VolumeVis\cfdPBufferQuad.h">
+						</File>
+						<File
+							RelativePath="..\VE-VolumeVis\cfdUpdateableOSGNoiseTexture3d.h">
+						</File>
+						<File
+							RelativePath="..\VE-VolumeVis\cfdUpdateableOSGTexture1d.h">
+						</File>
+						<File
+							RelativePath="..\VE-VolumeVis\cfdUpdateParameterCallback.h">
+						</File>
+						<File
+							RelativePath="..\VE-VolumeVis\cfdUpdateTextureCallback.h">
+						</File>
+					</Filter>
 				</Filter>
 			</Filter>
 		</Filter>
