updates for new dir structure on unix side. still need to debug some windows builds. it appears that the performer/tao build is hosed. will need to fix that tomorrow.

--- a/VE_CE/Makefile
+++ b/VE_CE/Makefile
@@ -4,7 +4,7 @@ VE_SUITE_HOME?= ../
 
 APP_NAME= $(VE_SUITE_HOME)/bin/$(CFDHOSTTYPE)/Exe_server
 
-IDL_HOME = $(VE_SUITE_HOME)/VESOpen
+IDL_HOME = $(VE_SUITE_HOME)/VEOpen
 
 srcdir= .
 
