--- a/VE_Installer/Makefile
+++ b/VE_Installer/Makefile
@@ -33,7 +33,7 @@
 DIRS= ${VE_SUITE_HOME}/VE_Builder/Translator \
       ${VE_SUITE_HOME}/VE_Builder/Preprocessor \
       ${VE_SUITE_HOME}/VE_Builder/Utilities \
-      ${VE_SUITE_HOME}/VESOpen \
+      ${VE_SUITE_HOME}/VEOpen \
       ${VE_SUITE_HOME}/VE_CE \
       ${VE_SUITE_HOME}/VE_Conductor \
       ${VE_SUITE_HOME}/VE_Xplorer
@@ -51,10 +51,10 @@ ${VE_SUITE_HOME}/VE_Builder/Preprocessor \
 ${VE_SUITE_HOME}/VE_CE \
 ${VE_SUITE_HOME}/VE_Conductor \
 ${VE_SUITE_HOME}/VE_Xplorer::
-	cd $@ && $(MAKE) -j
+	cd $@ && $(MAKE)
 #${VE_SUITE_HOME}/VE_Builder/WX_Translator
 
-${VE_SUITE_HOME}/VESOpen \
+${VE_SUITE_HOME}/VEOpen \
 ${VE_SUITE_HOME}/VE_Builder/Utilities::
 	cd $@ && $(MAKE)
 
